hphp/hack/test/typecheck/control_flow/switch_continue.php.exp
File "switch_continue.php", line 14, characters 9-17:
In PHP, 'continue;' inside a switch statement is equivalent to 'break;'. Hack does not support this; use 'break' if that is what you meant. (NastCheck[3006])
File "switch_continue.php", line 17, characters 9-17:
In PHP, 'continue;' inside a switch statement is equivalent to 'break;'. Hack does not support this; use 'break' if that is what you meant. (NastCheck[3006])
